Desktop alignment fixes

--- a/src/app/shared/components/footer/footer.component.scss
+++ b/src/app/shared/components/footer/footer.component.scss
@@ -38,6 +38,9 @@
         }
         li a {
           color: #979EC1;
+          &:hover, &.active {
+            color: $primary-color;
+          }
         }
       }
       h6 {
