--- a/src/app/tekbyte/components/tekbyte-details/tekbyte-details.component.scss
+++ b/src/app/tekbyte/components/tekbyte-details/tekbyte-details.component.scss
@@ -351,8 +351,8 @@
   h2 {
     color: #111111;
     font-family: 'TungstenSemiBold';
-    font-size: 40px;
-    height: 90px;
+    font-size: 36px;
+    height: 70px;
     box-shadow: 0px 3px 6px #00000029;
     line-height: 2;
     .arrow {
@@ -403,14 +403,14 @@ ul.timeline {
       top: -32px;
     }
     .year {
-      font-size: 40px;
+      font-size: 32px;
       color: #e30d45;
       font-family: 'TungstenSemiBold';
       line-height: 0px;
       padding-bottom: 20px;
     }
     .story {
-      font-size: 16px;
+      font-size: 14px;
       color: #727a89;
       line-height: 24px;
     }
